# Encryption_Trap

./: .gitignore  README.md  gitignore
EncryptionTrap/src/: dyersmat.py  experimentdata.csv  main.py  tuning.py
EncryptionTrap/src/prime_work/: prime_list.py  primes.txt
RobotController/: CMakeLists.txt  package.xml
RobotController/include/Dyers/: get_prime.cpp  get_prime.h  he1n.cpp  he1n.hpp  main.cpp  wide_data.h
RobotController/src/: controller.cpp
src/: apply_detector.py  dyers.py  main.py  overflowTrap.py  test_trap.py  tuning.py
src/prime_work/: find_primes.py  primes.txt
